work for payroll

--- a/totalhr.services/totalhr.services.csproj
+++ b/totalhr.services/totalhr.services.csproj
@@ -100,15 +100,16 @@
     <Compile Include="Implementation\CompanyService.cs" />
     <Compile Include="Implementation\ContractService.cs" />
     <Compile Include="Implementation\GlossaryService.cs" />
+    <Compile Include="Implementation\PayrollService.cs" />
     <Compile Include="Implementation\TaskSchedulerService.cs" />
     <Compile Include="Implementation\TimeRecordingServices.cs" />
     <Compile Include="Infrastructure\IContractService.cs" />
-
     <Compile Include="Implementation\ProfileService.cs" />
     <Compile Include="Implementation\RoleService.cs" />
     <Compile Include="Infrastructure\ICompanyService.cs" />
     <Compile Include="Infrastructure\IAccountService.cs" />
     <Compile Include="Infrastructure\IGlossaryService.cs" />
+    <Compile Include="Infrastructure\IPayrollService.cs" />
     <Compile Include="Infrastructure\IProfileService.cs" />
     <Compile Include="Infrastructure\IRoleService.cs" />
     <Compile Include="Infrastructure\ITaskSchedulerService.cs" />
