--- a/totalhr.web/Web.config
+++ b/totalhr.web/Web.config
@@ -58,6 +58,9 @@
     <httpRuntime targetFramework="4.5" maxRequestLength="20480" />
     <!-- upload limit to 20 MB-->
     <compilation debug="true" targetFramework="4.5" />
+    <httpModules>
+      <add name="CuteWebUI.UploadModule" type="CuteWebUI.UploadModule,CuteWebUI.AjaxUploader"/>
+    </httpModules>
     <authentication mode="Forms">
       <forms name="TotalHR" loginUrl="~/Account/Login" timeout="2880" cookieless="UseDeviceProfile" />
     </authentication>
@@ -100,6 +103,9 @@
     </sessionState>
   </system.web>
   <system.webServer>
+    <modules>
+      <add name="CuteWebUI.UploadModule" type="CuteWebUI.UploadModule,CuteWebUI.AjaxUploader"/>
+    </modules>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
