--- a/totalhr.web/Web.config
+++ b/totalhr.web/Web.config
@@ -35,6 +35,8 @@
     <add key="DefaultPageSize" value="5" />
     <add key="CompanyDocumentPath" value="~/CompanyDocuments/" />
     <add key="ProfilePicturePath" value="~/Employee/Profile/Picture/" />
+    <add key="AvatarPicturePath" value="~/Employee/Profile/Avatar/" />
+    <add key="GalleryImagePath" value="~/PhotoGallery/" />
   </appSettings>
   <log4net>
     <root>
@@ -58,9 +60,6 @@
     <httpRuntime targetFramework="4.5" maxRequestLength="20480" />
     <!-- upload limit to 20 MB-->
     <compilation debug="true" targetFramework="4.5" />
-    <httpModules>
-      <add name="CuteWebUI.UploadModule" type="CuteWebUI.UploadModule,CuteWebUI.AjaxUploader"/>
-    </httpModules>
     <authentication mode="Forms">
       <forms name="TotalHR" loginUrl="~/Account/Login" timeout="2880" cookieless="UseDeviceProfile" />
     </authentication>
@@ -103,10 +102,7 @@
     </sessionState>
   </system.web>
   <system.webServer>
-    <modules>
-      <add name="CuteWebUI.UploadModule" type="CuteWebUI.UploadModule,CuteWebUI.AjaxUploader"/>
-    </modules>
-    <validation validateIntegratedModeConfiguration="false" />
+   <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
