Fix for generic file upload

--- a/FileManagementService/FileManagementService.csproj
+++ b/FileManagementService/FileManagementService.csproj
@@ -42,13 +42,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Implementation\BaseFileHandler.cs" />
     <Compile Include="Implementation\FileService.cs" />
+    <Compile Include="Implementation\PhotoGalleryHandler.cs" />
     <Compile Include="Implementation\ProfilePictureFileHandler.cs" />
     <Compile Include="Infrastructure\IFileHandlerService.cs" />
     <Compile Include="Infrastructure\IFileService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ImageGallery\ImageGallery.csproj">
+      <Project>{c8b9dc65-cf22-47cb-81e2-50f5771435e4}</Project>
+      <Name>ImageGallery</Name>
+    </ProjectReference>
     <ProjectReference Include="..\totalhr.data\totalhr.data.csproj">
       <Project>{f5a3d97a-a1b9-463a-850e-23cf6e1fc488}</Project>
       <Name>totalhr.data</Name>
