--- a/totalhr.web/Web.config
+++ b/totalhr.web/Web.config
@@ -37,6 +37,7 @@
     <add key="ProfilePicturePath" value="~/Employee/Profile/Picture/" />
     <add key="AvatarPicturePath" value="~/Employee/Profile/Avatar/" />
     <add key="GalleryImagePath" value="~/PhotoGallery/" />
+    <add key="DefaultUploadPath" value="~/GenericUploads/" />
   </appSettings>
   <log4net>
     <root>
