--- a/totalhr.data/totalhr.data.csproj
+++ b/totalhr.data/totalhr.data.csproj
@@ -269,6 +269,9 @@
     <Compile Include="EF\GetUserListForAdmin_Result.cs">
       <DependentUpon>DatabaseModels.tt</DependentUpon>
     </Compile>
+    <Compile Include="EF\GetUserProfileDetails_Result.cs">
+      <DependentUpon>DatabaseModels.tt</DependentUpon>
+    </Compile>
     <Compile Include="EF\GetUserProfiles_Result.cs">
       <DependentUpon>DatabaseModels.tt</DependentUpon>
     </Compile>
