--- a/totalhr.Shared/totalhr.Shared.csproj
+++ b/totalhr.Shared/totalhr.Shared.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Models\CalendarEventCache.cs" />
     <Compile Include="Models\CalendarEventInfo.cs" />
     <Compile Include="Models\CalendarEventReminder.cs" />
+    <Compile Include="Models\CalendarInfo.cs" />
     <Compile Include="Models\ChatModel.cs" />
     <Compile Include="Models\ChatRoomInfo.cs" />
     <Compile Include="Models\CompanyOrganigram.cs" />
