--- a/totalhr.Resources/Resources/totalhr.Resources.csproj
+++ b/totalhr.Resources/Resources/totalhr.Resources.csproj
@@ -159,45 +159,90 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Document.resx</DependentUpon>
     </Compile>
+    <Compile Include="Document.fr-FR.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Document.fr-FR.resx</DependentUpon>
+    </Compile>
     <Compile Include="EnumDescription.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>EnumDescription.resx</DependentUpon>
+    </Compile>
+    <Compile Include="EnumDescription.fr-FR.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EnumDescription.fr-FR.resx</DependentUpon>
     </Compile>
     <Compile Include="Error.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Error.resx</DependentUpon>
     </Compile>
+    <Compile Include="Error.fr-FR.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Error.fr-FR.resx</DependentUpon>
+    </Compile>
     <Compile Include="FieldFurtherInfo.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>FieldFurtherInfo.resx</DependentUpon>
+    </Compile>
+    <Compile Include="FieldFurtherInfo.fr-FR.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FieldFurtherInfo.fr-FR.resx</DependentUpon>
     </Compile>
     <Compile Include="FileTypeNames.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>FileTypeNames.resx</DependentUpon>
     </Compile>
+    <Compile Include="FileTypeNames.fr-FR.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FileTypeNames.fr-FR.resx</DependentUpon>
+    </Compile>
     <Compile Include="FormGenerator.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>FormGenerator.resx</DependentUpon>
+    </Compile>
+    <Compile Include="FormGenerator.fr-FR.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FormGenerator.fr-FR.resx</DependentUpon>
     </Compile>
     <Compile Include="FormMessages.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>FormMessages.resx</DependentUpon>
     </Compile>
+    <Compile Include="FormMessages.fr-FR.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FormMessages.fr-FR.resx</DependentUpon>
+    </Compile>
     <Compile Include="Gallery.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Gallery.resx</DependentUpon>
     </Compile>
+    <Compile Include="Gallery.fr-FR.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Gallery.fr-FR.resx</DependentUpon>
+    </Compile>
     <Compile Include="Payroll.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Payroll.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Payroll.fr-FR.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Payroll.fr-FR.resx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task.Designer.cs">
@@ -205,10 +250,20 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Task.resx</DependentUpon>
     </Compile>
+    <Compile Include="Task.fr-FR.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Task.fr-FR.resx</DependentUpon>
+    </Compile>
     <Compile Include="TimeRecording.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>TimeRecording.resx</DependentUpon>
+    </Compile>
+    <Compile Include="TimeRecording.fr-FR.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TimeRecording.fr-FR.resx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -261,56 +316,95 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Contract.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Document.fr-FR.resx" />
+    <EmbeddedResource Include="Document.fr-FR.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Document.fr-FR.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Document.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Document.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="EnumDescription.fr-FR.resx" />
+    <EmbeddedResource Include="EnumDescription.fr-FR.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>EnumDescription.fr-FR.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="EnumDescription.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>EnumDescription.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Error.fr-FR.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Error.fr-FR.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Error.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Error.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="FieldFurtherInfo.fr-FR.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>FieldFurtherInfo.fr-FR.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="FieldFurtherInfo.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>FieldFurtherInfo.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FileTypeNames.fr-FR.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>FileTypeNames.fr-FR.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="FileTypeNames.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>FileTypeNames.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormGenerator.fr-FR.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>FormGenerator.fr-FR.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormGenerator.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>FormGenerator.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMessages.fr-FR.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>FormMessages.fr-FR.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="FormMessages.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>FormMessages.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Gallery.fr-FR.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Gallery.fr-FR.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Gallery.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Gallery.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Payroll.fr-FR.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Payroll.fr-FR.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Payroll.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Payroll.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Task.fr-FR.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Task.fr-FR.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Task.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Task.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TimeRecording.fr-FR.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>TimeRecording.fr-FR.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="TimeRecording.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>TimeRecording.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
