--- a/totalhr.web/Web.config
+++ b/totalhr.web/Web.config
@@ -7,11 +7,11 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
-    
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
-    <!--<add name="TotalHREntities" connectionString="metadata=res://*/EF.DatabaseModels.csdl|res://*/EF.DatabaseModels.ssdl|res://*/EF.DatabaseModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=IM-PC10030\SQLEXPRESSPC1003;initial catalog=TotalHR;persist security info=True;user id=sa;password=steelpan60;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->    
-     <add name="TotalHREntities" connectionString="metadata=res://*/EF.DatabaseModels.csdl|res://*/EF.DatabaseModels.ssdl|res://*/EF.DatabaseModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=joe-Tosh-Laptop\SQLEXPRESS2012;initial catalog=TotalHR;persist security info=True;user id=sa;password=steelpan60;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="TotalHREntities" connectionString="metadata=res://*/EF.DatabaseModels.csdl|res://*/EF.DatabaseModels.ssdl|res://*/EF.DatabaseModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=IM-PC10030\SQLEXPRESSPC1003;initial catalog=TotalHR;persist security info=True;user id=sa;password=steelpan60;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="TotalHREntities" connectionString="metadata=res://*/EF.DatabaseModels.csdl|res://*/EF.DatabaseModels.ssdl|res://*/EF.DatabaseModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=joe-Tosh-Laptop\SQLEXPRESS2012;initial catalog=TotalHR;persist security info=True;user id=sa;password=steelpan60;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="TotalHREntities" connectionString="metadata=res://*/EF.DatabaseModels.csdl|res://*/EF.DatabaseModels.ssdl|res://*/EF.DatabaseModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=89.200.136.77;initial catalog=TotalHR;persist security info=True;user id=sa;password=steelpan60;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--<add name="TimeRecordingEntities" connectionString="metadata=res://*/EF.TimeRecording.csdl|res://*/EF.TimeRecording.ssdl|res://*/EF.TimeRecording.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=89.200.136.77;initial catalog=TotalHR;persist security info=True;user id=sa;password=steelpan60;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="TimeRecordingEntities" connectionString="metadata=res://*/EF.TimeRecording.csdl|res://*/EF.TimeRecording.ssdl|res://*/EF.TimeRecording.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=joe-Tosh-Laptop\SQLEXPRESS2012;initial catalog=TotalHR;persist security info=True;user id=sa;password=steelpan60;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
@@ -105,7 +105,7 @@
     </sessionState>
   </system.web>
   <system.webServer>
-   <validation validateIntegratedModeConfiguration="false" />
+    <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
@@ -116,7 +116,7 @@
     </handlers>
   </system.webServer>
   <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">     
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
