last changes on authentication

--- a/totalhr.web/Web.config
+++ b/totalhr.web/Web.config
@@ -40,6 +40,8 @@
     <add key="SmallAvatarPicturePath" value="~/Employee/Profile/avatar-mini/" />
     <add key="GalleryImagePath" value="~/PhotoGallery/" />
     <add key="DefaultUploadPath" value="~/GenericUploads/" />
+   <add key="CookieDomain" value="FromPlayToBow.com" />
+  <add key="CookiePrefix" value="THR_" />
   </appSettings>
   <log4net>
     <root>
