--- a/Authentication/Authentication.csproj
+++ b/Authentication/Authentication.csproj
@@ -72,7 +72,6 @@
     <Compile Include="Infrastructure\IOAuthService.cs" />
     <Compile Include="Models\ClientUser.cs" />
     <Compile Include="Models\CustomAuthAttribute.cs" />
-    <Compile Include="Models\CustomAuthorizeAttribute.cs" />
     <Compile Include="Models\Enums.cs" />
     <Compile Include="Models\ProfileCheck.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -91,6 +90,7 @@
       <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
