--- a/totalhr.data/App.config
+++ b/totalhr.data/App.config
@@ -16,4 +16,16 @@
     <!--<add name="TotalHREntities" connectionString="metadata=res://*/EF.DatabaseModels.csdl|res://*/EF.DatabaseModels.ssdl|res://*/EF.DatabaseModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=89.200.136.77;initial catalog=TotalHR;persist security info=True;user id=sa;password=steelpan60;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--<add name="TotalHREntities" connectionString="metadata=res://*/EF.DatabaseModels.csdl|res://*/EF.DatabaseModels.ssdl|res://*/EF.DatabaseModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=IM-PC10030\SQLEXPRESSPC1003;initial catalog=TotalHR;persist security info=True;user id=sa;password=steelpan60;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
