--- a/totalhr.service.messaging/App.config
+++ b/totalhr.service.messaging/App.config
@@ -1,14 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
   </configSections>
   <log4net>
     <root>
       <level value="DEBUG" />
       <appender-ref ref="LogFileAppender" />
     </root>
-    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender" >
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
       <param name="File" value="log-file.txt" />
       <param name="AppendToFile" value="true" />
       <rollingStyle value="Size" />
@@ -21,4 +21,16 @@
       </layout>
     </appender>
   </log4net>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
